##Text encoding: utf-8

2005-03-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: fixed distcleancheck problem.
	* docs/reference/Makefile.am: make things work without doxygen for normal
	user.

2005-03-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Doxyfile.in: use version from configure.
	* docs/reference/Makefile.am: fixed remaining build issues.
	* gchemutils.xml.in: imported chemical/x-pdb magic stuff from chemicalmime
	project.
	* Doxyfile: definitively removed.
	* autogen.sh: emits an error message when doxygen is not present and exits.

2005-03-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkchem3dviewer.cc: use GNOME_VFS_FILE_INFO_FORCE_SLOW_MIME_TYPE
	when detecting mime types.

2005-03-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gchem3d-viewer.c: (main): transform argument to full uri.
	* gcu/gtkchem3dviewer.cc: fixed typos.

2005-03-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* Doxyfile: restore it.
	* autogen.sh: use Doxyfile instead of 
	* configure.ac: generate Doxyfile.
	* docs/reference/Doxyfile: removed, will be generated by configure.
	* docs/reference/Doxyfile.in: source for Doxyfile.
	* docs/reference/Makefile.am: make distcheck issues fixed.

2005-03-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: don't check for shared-mime-info if disable-umdate-databases
	is set.

2005-03-19  Daniel Leidert  <daniel.leidert@wgdd.de>
	* autogen.sh: doxygen generated documentation is compressed to tar.gz
	* configure.ac: added test for doxygen
	* docs/reference/Makefile.am: doxygen generates updated documentation
	  during 'make all', dependent on doxygen availability
	* Doxyfile -> docs/reference/Doxyfile: moved Doxyfile

2005-03-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* Doxyfile: updated to recent doxygen version.
	* gcu/Makefile.am: fixed more build issues.
	* gcu/object.h: fixed a doxygen related warning.

2005-03-18  Jean Bréfort  <jean.brefort@normalesup.org>